Prevent code block overflow

--- a/src/main.css
+++ b/src/main.css
@@ -60,6 +60,10 @@ p {
   font-size: var(--font-size);
 }
 
+pre code {
+  text-overflow: clip;
+}
+
 @media screen and (min-width: 800px) {
   body {
     max-width: 800px;
